# dev-tools

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
.claude/: settings.local.json
docs/superpowers/specs/: 2026-04-01-deep-json-format-design.md
src/: main.rs  tools.rs
src/tools/: crypto.rs  encoder.rs  format.rs  http_client.rs  json_tools.rs  markdown.rs  mod.rs  sub_convert.rs  text.rs  time_convert.rs  translate.rs
static/: index.html  utilities.html
