[package]
name = "dev-tools"
version = "0.3.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Markdown rendering
comrak = "0.36"

# HTTP client for translation API
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"

# Base64 for subscription conversion
base64 = "0.22"

# YAML parsing for Clash subscriptions
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Hash & Crypto
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"

# JWT
jsonwebtoken = "9"

# XML
quick-xml = "0.31"

# CSV
csv = "1"

# UUID
uuid = { version = "1", features = ["v4", "v7"] }

# Random
rand = "0.8"

# Regex
regex = "1"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
